// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityIndicator Snapshot 1`] = `null`;

exports[`AlbumCard Snapshot 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "marginTop": 15,
    }
  }
>
  <View>
    <Image
      source={
        Object {
          "uri": "https://via.placeholder.com/400/92c952",
        }
      }
      style={
        Object {
          "borderRadius": 5,
          "height": 180,
          "width": 360,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "marginHorizontal": 20,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 16,
          "marginBottom": 15,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "grey",
          "fontSize": 15,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "grey",
          "fontSize": 15,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "grey",
          "fontSize": 15,
        }
      }
    />
    <View
      style={
        Object {
          "marginTop": 15,
          "width": 225,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={Object {}}
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "margin": 8,
                  "textAlign": "center",
                },
                Object {
                  "color": "purple",
                },
              ]
            }
          >
            View Album
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Backdrop Snapshot 1`] = `null`;

exports[`Backdrop Snapshot 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "purple",
      "justifyContent": "center",
      "padding": 15,
      "width": 750,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FFFF",
        "borderRadius": 25,
        "padding": 10,
        "width": 262.5,
      }
    }
  >
    <Text
      style={
        Object {
          "alignSelf": "center",
          "fontSize": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`Heading Snapshot 1`] = `
<Text
  style={
    Object {
      "fontSize": 16,
      "marginBottom": 15,
    }
  }
/>
`;

exports[`ImageThumbnail Snapshot 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": undefined,
      }
    }
    style={
      Object {
        "borderRadius": 5,
        "height": 180,
        "width": 360,
      }
    }
  />
</View>
`;

exports[`ListItem Snapshot 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
      "width": 375,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "grey",
          "fontSize": 15,
          "marginBottom": 5,
          "padding": 5,
        },
        null,
      ]
    }
  />
</View>
`;

exports[`SubHeading Snapshot 1`] = `
<Text
  style={
    Object {
      "color": "grey",
      "fontSize": 15,
    }
  }
/>
`;

exports[`SwipeButton Snapshot 1`] = `<View />`;
